# fastapi-kafka

./: .gitignore  Dockerfile  README.md  config.py  create-topics.sh  db.py  docker-compose.yaml  kafka_main.py  main.py  models.py  pyproject.toml  views.py
migrations/: env.py
migrations/versions/: c999a04311bd_adds_user_and_post_tables.py
